resources/kubernetes/animals/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: app
spec:
  selector:
    app: client
  ports:
    - name: client
      port: 8080
      targetPort: 3001
      nodePort: 30001
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: app
spec:
  selector:
    app: server
  ports:
    - name: server
      port: 80
      targetPort: 3002
      nodePort: 30002
  type: NodePort
