resources/kubernetes/animals/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: app-ingress-group
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: client-service
              servicePort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: app-ingress-group
    alb.ingress.kubernetes.io/group.order: '2'
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: server-service
              servicePort: 80
# ANOTHER WAY TO DO THIS ^
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-resource
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /ping(/|$)(.*)
#             backend:
#               serviceName: ping-service
#               servicePort: 8080
#           - path: /data(/|$)(.*)
#             backend:
#               serviceName: data-service
#               servicePort: 8080
#           - path: /admin(/|$)(.*)
#             backend:
#               serviceName: admin-service
#               servicePort: 8080
